@@ -1,3 +1,8 @@
+2010-05-15  Carsten Dominik  <carsten.dominik@gmail.com>
+
+	* org-latex.el (org-export-latex-format-image): Add support
+	for multicolumn figures in LaTeX.
+
 2010-05-14  David Maus  <dmaus@ictsoc.de>
 
 	* org.el (org-clone-subtree-with-time-shift): Remove ID
