@@ -1,3 +1,8 @@
+2010-05-15  Carsten Dominik  <carsten.dominik@gmail.com>
+
+	* org.texi (Tables in LaTeX export): Document the multicolumn
+	keyword.
+
 2010-05-10  Carsten Dominik  <carsten.dominik@gmail.com>
 
 	* org.texi (The date/time prompt): Document the new keys `C-v'
